--- a/examples/ESP32-S3/Basic OTADash Station Mode/platformio.ini
+++ b/examples/ESP32-S3/Basic OTADash Station Mode/platformio.ini
@@ -13,5 +13,5 @@ platform    = espressif32
 board       = esp32-s3-devkitc-1
 framework   = arduino
 
-lib_deps    = https://github.com/Hamas888/OTA-Dash.git
+; lib_deps    = https://github.com/Hamas888/OTA-Dash.git
     
